# Cooked

./: .gitignore  README.md  pyproject.toml  setup.cfg
scripts/: requirements.txt
scripts/linux/: build_android.sh  config.sh  setup_env.sh
scripts/windows/: build_android.bat
setup_env/: setup_env.bat
src/: Rout.py  Test.py  Utils.py  main.py
src/DataSource/: DataBaseInfo.py  DataSource.py  LoadData.py  SupaBase.py
src/DataSource/SupaBaseScipts/: shopping_list_trigger
src/Ingredient/: Ingredient.py  IngredientView.py
src/MyFletConstrols/: MyLabel.py  MySearchBar.py  MyToast.py
src/Objects/: Ingredient.py  Item.py  Recipe.py
src/Recipe/: Recipe.py  RecipesView.py
src/Settings/: Colors.py  Parameters.py
src/UserActions/: IngredientActions.py  ShoppingListActions.py
src/Views/: IngredientViews.py  ParametersViews.py  RecipeViews.py  Rout.py  ShoppingListView.py  ShoppingViews.py  Utils.py
src/Views/Ingredients/: CreateIngredientView.py  EditIngredientView.py  IngredientListView.py  IngredientView.py
src/Views/Recipes/: RecipeListView.py  RecipeView.py
