[metadata]
name = cooked
version = 0.0.0
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3

[options]
include_package_data = True
packages = find:
python_requires = >=3.13
install_requires =
    black
    isort
    pylint
    flet
